refactor: auth, user
